fix: update body and html styles
- Add `overflow-y: hidden` to `html` element to hide vertical scrollbar
- Remove `overflow-x: hidden` from `html` element as it is not needed

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -15,8 +15,8 @@
 }
 
 html {
-    /* overflow-y: hidden; Скрываем вертикальный scrollbar */
-    overflow-x: hidden; /* Скрываем горизонтальный scrollbar */
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 body {
